--- a/index.html
+++ b/index.html
@@ -14,37 +14,38 @@
 <body>
     <div class="portal">
         <div class="portal__wrapper">
-            <form class="portal__wrapper__form">
+            <form action="#" class="portal__wrapper__form">
                 <div class="portal__wrapper__form__wrapper">
                     <div class="portal__wrapper__form__wrapper__title">
-                        <h1>Student</h1>
-                        <h2>Portal v3</h2>
+                        <h1><span>Student</span> Portal v3</h1>
+                        <p>Sign in to start your session</p>
                     </div>
                     <div class="portal__wrapper__form__wrapper__field">
                         <div class="portal__wrapper__form__wrapper__field__input">
-                            <input type="text" name="studno" id="studno" class="js-input">
+                            <input type="text" id="studno" class="js-input">
                             <label for="studno">Student Number</label>
                         </div>
                         <div class="portal__wrapper__form__wrapper__field__input">
-                            <input type="password" name="acode" id="acode" class="js-input js-pass">
+                            <input type="password" id="acode" class="js-input js-pass">
                             <label for="acode">Access Code</label>
                             <img id="show-hide-pass" src="assets/showPass.svg" alt="">
-                            <a href="#">Forgot Password?</a>
+                            <a href="#" id="forgot-pass">Forgot Password?</a>
                         </div>
                         <div class="portal__wrapper__form__wrapper__field__input">
-                            <input type="text" name="captcha" id="captcha" class="js-input">
+                            <input type="text" id="captcha" class="js-input" >
                             <label for="captcha">Antibot Validation</label>
                             <img id="captcha-img" src="https://www.ue.edu.ph/portals/sp/c3po/" alt="">
                         </div>
                         <div class="portal__wrapper__form__wrapper__field__button">
                             <button>Sign in</button>
                         </div>
+
                         <p id="terms">By using this service, you understood and agree to the UE Online Services <a href="#">Terms of Use</a> and <a href="#">Privacy Statement</a>.</p>
                     </div>
                 </div>
             </form>
             <div class="portal__wrapper__hero">
-                <img src="assets/ue-logo.png" alt="logo">
+                <img src="assets/ue-logo.png" alt="">
             </div>
         </div>
     </div>
